test_suite/tests/ui/remote/wrong_getter.stderr
error[E0308]: mismatched types
  --> $DIR/wrong_getter.rs:15:10
   |
15 | #[derive(Serialize)]
   |          ^^^^^^^^^ expected u8, found u16
   |
   = note: expected type `&u8`
              found type `&u16`
